docs: fix typos

--- a/README.Rmd
+++ b/README.Rmd
@@ -330,7 +330,7 @@ with ezpq.Queue(10) as Q:
 [x['output'] for x in output[:10]]
 ```
 
-### startmapkw
+### starmapkw
 
 Same as `starmap`, but operations on a list of *dicts* to be expanded as kwargs to the function.
 
