build: apply project template

--- a/README.ipynb
+++ b/README.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: My app title 🚀\n",
+    "description: Data app with many calculations\n",
+    "params:\n",
+    "    variable:\n",
+    "        input: text \n",
+    "        label: Please provide text\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -282,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
